[gd_scene load_steps=16 format=2]

[ext_resource path="res://Wire_Terminal.gd" type="Script" id=1]
[ext_resource path="res://ogpc_wire_access_terminal_background.png" type="Texture" id=2]
[ext_resource path="res://ogpc_wire_access_terminal_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://Fonts/PTMono-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 20, 17 )

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 20, 0, 20, 17 )

[sub_resource type="AtlasTexture" id=3]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 20, 17 )

[sub_resource type="AtlasTexture" id=4]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 60, 0, 20, 17 )

[sub_resource type="AtlasTexture" id=5]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 20, 17 )

[sub_resource type="AtlasTexture" id=6]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 20, 17 )

[sub_resource type="AtlasTexture" id=7]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 20, 17 )

[sub_resource type="AtlasTexture" id=8]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 140, 0, 20, 17 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 14.0
height = 6.0

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 4 )

[node name="Wire_Terminal" type="Node2D" groups=["Wire_Terminal"]]
z_index = -2
script = ExtResource( 1 )

[node name="Terminal_Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Idle"
playing = true

[node name="Terminal_Background_Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Player_Use_Range" type="Area2D" parent="."]

[node name="Player_Use_Range_Collider" type="CollisionShape2D" parent="Player_Use_Range"]
rotation = 1.5708
shape = SubResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Press2Use" type="Label" parent="CanvasLayer"]
margin_right = 169.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 11 )
text = "Press Interact To Use"

[connection signal="body_entered" from="Player_Use_Range" to="." method="_on_Player_Use_Range_body_entered"]
[connection signal="body_exited" from="Player_Use_Range" to="." method="_on_Player_Use_Range_body_exited"]
